# Matthias

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUMMARY.md  _typos.toml  build.rs  build_android.sh  build_desktop.sh  build_desktop_release.sh  build_info.matthias_build  build_info.szechat_build  check.cmd  dependencies.txt  getting-started.md  install_dependencies.cmd  notetoself  rust-toolchain.toml  ship.sh  temp.txt  test
.cargo/: config.toml
.github/workflows/: typos.yml
Installer/MatthiasSetup/: MatthiasSetup.vdproj
dependencies/opencv/: readme.txt
dependencies/openssl/openssl-android-arm64-v8a/share/man/man1/: CA.pl.1  asn1parse.1  ca.1  ciphers.1  cms.1  crl2pkcs7.1  dgst.1  dhparam.1  dsa.1  ec.1  enc.1  engine.1  gendsa.1  genpkey.1  genrsa.1  list.1  ocsp.1  openssl.1  passwd.1  pkcs12.1  pkcs7.1  pkcs8.1  pkey.1  pkeyparam.1  req.1  rsautl.1  s_client.1  smime.1  speed.1  spkac.1  ts.1  verify.1  x509.1
dependencies/openssl/openssl-android-arm64-v8a/share/man/man3/: ASN1_INTEGER_get_int64.3  ASN1_OBJECT_new.3  ASN1_STRING_length.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_TIME_set.3  ASN1_TYPE_get.3  ASYNC_WAIT_CTX_new.3  ASYNC_start_job.3  BF_encrypt.3  BIO_ADDRINFO.3  BIO_connect.3  BIO_ctrl.3  BIO_f_base64.3  BIO_f_buffer.3  BIO_f_cipher.3  BIO_f_md.3  BIO_f_ssl.3  BIO_find_type.3  BIO_get_data.3  BIO_get_ex_new_index.3  BIO_meth_new.3  BIO_new_CMS.3  BIO_push.3  BIO_read.3  BIO_s_bio.3  BIO_s_connect.3  BIO_s_fd.3  BIO_s_file.3  BIO_s_mem.3  BIO_s_null.3  BIO_s_socket.3  BIO_set_callback.3  BIO_should_retry.3  BN_BLINDING_new.3  BN_CTX_new.3  BN_CTX_start.3  BN_add.3  BN_bn2bin.3  BN_copy.3  (+254 more)
dependencies/openssl/openssl-android-arm64-v8a/share/man/man5/: x509v3_config.5
dependencies/openssl/openssl-android-arm64-v8a/share/man/man7/: ct.7  des_modes.7  evp.7
desktop/: Cargo.toml  build.rs  build_info.matthias_build  rust-toolchain.toml
desktop/.cargo/: config.toml
desktop/.github/: FUNDING.yml
desktop/Installer/: Matthias.sln
desktop/Installer/MatthiasSetup/: MatthiasSetup.vdproj
desktop/src/: app.rs  main.rs
desktop/src/app/: backend.rs  client.rs  lua.rs  server.rs
desktop/src/app/ui/: client.rs  register.rs
desktop/src/app/ui/client_ui/client_actions/: audio_recording.rs
desktop/src/app/ui/client_ui/message_instances/: message_display.rs  message_main.rs  mod.rs
desktop/src/app/ui/client_ui/widgets/emoji_tray/: emoji.rs
desktop/src/app/ui/client_ui/widgets/file_tray/: file_tray_main.rs
desktop/src/app/ui/client_ui/widgets/message_tray/: message_tray_main.rs  mod.rs
icons/: client.png~  cross.png~  record.png~  send_msg.png~
miscellaneous/: image-memory-management.md
mobile/: .rustc_info.json  Cargo.toml  build.rs  build.sh  build_info.Matthias_build  build_info.matthias_build  dep-tree.txt  error.txt  rust-toolchain.toml  rustfmt.toml
mobile/.cargo/: config.toml
mobile/src/: app.rs  lib.rs  main.rs
mobile/src/app/: backend.rs  client.rs  lua.rs  server.rs
mobile/src/app/ui/: client.rs  register.rs  server.rs
mobile/src/app/ui/client_ui/: mod.rs
mobile/src/app/ui/client_ui/message_instances/: message_display.rs  message_main.rs
mobile/src/app/ui/client_ui/widgets/: mod.rs
mobile/src/app/ui/client_ui/widgets/file_tray/: file_tray_main.rs  mod.rs
mobile/src/app/ui/client_ui/widgets/message_tray/: message_tray_main.rs
proto/: messages.proto  payments.proto
schematics/: message_struct.schematics
src/: app.rs  lib.rs  main.rs
src/app/: account_manager.rs  audio_recording.rs  backend.rs  client.rs  emoji_header.rs  input.rs  lua.rs  networking.rs  server.rs  windows_handling.rs
src/app/ui/: client.rs  emoji.rs  login.rs  mod.rs  mode_selection.rs  register.rs  server.rs
src/app/ui/client_ui/client_actions/: actions.rs  audio_recording.rs  mod.rs
src/app/ui/client_ui/message_instances/: audio.rs  deleted.rs  file.rs  image.rs  message_display.rs  message_main.rs  mod.rs  text.rs
src/app/ui/client_ui/widgets/: mod.rs
src/app/ui/client_ui/widgets/emoji_tray/: emoji.rs  message_reaction.rs  mod.rs
src/app/ui/client_ui/widgets/file_tray/: file_tray_main.rs
src/app/ui/client_ui/widgets/message_tray/: message_tray_main.rs
variables/getter-functions/: README.md  fields-available-for-getting.md
visuals/media/: README.md  image.md  text.md
visuals/shapes/: README.md  circle.md  line.md  rectangle.md
