[package]
name = "Matthias"
version = "4.0.0"
authors = ["Varga Marcell <v.marcell4000@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
egui = "0.24.1"
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] } # Add the types you want support for
tonic = {version = "0.7.0", features = ["tls", "transport", "channel"]} #, "compression"

prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
eframe = { version = "0.24.1", default-features = true, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "default"
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
tonic-build = "0.10.2"
mpsc = "0.2.1"
chrono = "0.4.31"
reqwest = {version = "0.11.22", features = ["blocking"]}
winres = "0.1.12"
hex = "0.4.3"
rust-argon2 = "2.0"
instant-acme = "0.4.0"
clap = "4.4.6"
rcgen = "0.11.3"
anyhow = "1.0.75"
serde_json = "1.0.107"
parse-macros = "0.1.0"
clap_derive = "4.4.2"
aes-gcm = "0.10.3"
regex = "1.10.2"
rfd = "0.12.1"
device_query = "1.1.3"
rand = "0.8.5"
unicode_names2 = "1.2.0"
cpal = "0.15.2"
hound = "3.5.1"
arg = "0.4.1"
rodio = {version = "0.17.3", features = ["wav", "mp3", "flac"]}
claxon = "0.4.3"
strum = {version = "0.25.0", features = ["derive"]}
strum_macros = "0.25.3"
base64 = "0.22.0"
tap = "1.0.1"
tracing = "0.1.40"
winapi = {version = "0.3.9", features = ["winuser"]}

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
chrono = "0.4.31"
tonic-build = "0.7"
winres = "0.1.12"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
