[package]
name = "matthias"
version = "5.0.0"
authors = ["Varga Marcell <v.marcell4000@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
egui = "0.28.0"
egui_extras = { version = "0.28.0", features = ["all_loaders", "datepicker", "serde", "syntect"] }
image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] } # Add the types you want support for

prost = "0.10"
tokio = { version = "1.37.0", features = ["full"] }
eframe = { version = "0.28.0", default-features = true, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "default"
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
chrono = {version = "0.4.31", features = ["serde"]}
reqwest = {version = "0.11.22", features = ["blocking"]}
winres = "0.1.12"
hex = "0.4.3"
rust-argon2 = "2.0"
anyhow = "1.0.75"
serde_json = "1.0.107"
aes-gcm = "0.10.3"
regex = "1.10.2"
rfd = "0.12.1"
rand = "0.8.5"
cpal = "0.15.2"
hound = "3.5.1"
rodio = {version = "0.17.3", features = ["wav", "mp3", "flac"]}
claxon = "0.4.3"
strum = {version = "0.25.0", features = ["derive"]}
strum_macros = "0.25.3"
base64 = "0.22.0"
tap = "1.0.1"
tracing = "0.1.40"
winapi = {version = "0.3.9", features = ["winuser"]}
tokio-util = "0.7.11"
dashmap = {version = "6.0.0", features = ["serde"]}
sha256 = "1.5.0"
phf = {version = "0.11.2", features = ["macros"]}

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
chrono = "0.4.31"
winres = "0.1.12"
phf_codegen = "0.11.2"
phf_macros = "0.11.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = "s"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# Dont optimize in debug builds for faster compile and better sense of code speed:
[profile.dev]
opt-level = 0 
