[package]
name = "matthias-mobile"
version = "1.0.0"
authors = ["Varga Marcell <v.marcell4000@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[lib]
crate-type = ["cdylib"]
name = "main"

[[bin]]
path = "src/lib.rs"
name = "matthias-mobile"
required-features = ["desktop"]

[features]
default = []
desktop = []

[dependencies]
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders", "datepicker", "serde", "syntect", "image"] }
image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp", "gif"] } # Add the types you want support for

tokio = { version = "1.37.0", features = ["full"] }
eframe = { version = "0.28.1", default-features = true, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "default",
    "android-game-activity"
] }

log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
chrono = {version = "0.4.31", features = ["serde"]}
reqwest = {version = "0.11.22", features = ["blocking"]}
# winres = "0.1.12"
hex = "0.4.3"
rust-argon2 = "2.0"
anyhow = "1.0.75"
serde_json = "1.0.107"
aes-gcm = "0.10.3"
regex = "1.10.2"
rand = "0.8.5"
cpal = "0.15.2"
hound = "3.5.1"
rodio = {version = "0.17.3", features = ["wav", "mp3", "flac"]}
claxon = "0.4.3"
strum = {version = "0.25.0", features = ["derive"]}
strum_macros = "0.25.3"
base64 = "0.22.0"
tap = "1.0.1"
tracing = "0.1.40"
winapi = {version = "0.3.9", features = ["winuser"]}
tokio-util = "0.7.11"
dashmap = {version = "6.0.0", features = ["serde"]}
sha256 = "1.5.0"
phf = {version = "0.11.2", features = ["macros"]}
num-traits = "0.2.19"
egui-notify = "0.15.0"
tokio-console = "0.1.10"
console-subscriber = "0.2.0"
socket2 = "0.5.7"
wincam = "0.1.3"
indexmap = "2.3.0"
android_logger = "0.14.1"
env_logger = "0.11.5"
winit = {version = "0.29.5", features = ["android-game-activity"]}

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[build-dependencies]
chrono = "0.4.31"
phf_macros = "0.11.2"
